--- a/app/apps/beheer/templates/beheer.html
+++ b/app/apps/beheer/templates/beheer.html
@@ -1,23 +1,31 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
 {% load json_encode from json_tags %}
-
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
-        <h1> Beheer</h1>
-
-        <ul class="list--blocks-horizontal">
-            <li><a href="{% url 'gebruiker_lijst' %}">Gebruikers</a></li>
-            <li><a href="{% url 'context_lijst' %}">Rollen</a></li>
-            <li><a href="{% url 'rechtengroep_lijst' %}">Rechtengroepen</a></li>
-            <li><a href="{% url 'standaard_externe_omschrijving_lijst' %}">Standaardteksten</a></li>
-        </ul>
-
-
-        <h2>Andere Forzamor beheer productie omgevingen</h2>
-        <ul class="list--blocks-horizontal">
-            <li><a href="https://fixer.forzamor.nl/beheer">FixeR</a></li>
-            <li><a href="https://onderwerpen.forzamor.nl/beheer">Onderwerpen</a></li>
-        </ul>
+    <h1>Beheer</h1>
+    <ul class="list--blocks-horizontal">
+        <li>
+            <a href="{% url 'gebruiker_lijst' %}">Gebruikers</a>
+        </li>
+        <li>
+            <a href="{% url 'context_lijst' %}">Rollen</a>
+        </li>
+        <li>
+            <a href="{% url 'rechtengroep_lijst' %}">Rechtengroepen</a>
+        </li>
+        <li>
+            <a href="{% url 'standaard_externe_omschrijving_lijst' %}">Standaardteksten</a>
+        </li>
+    </ul>
+    <h2>Andere Forzamor beheer productie omgevingen</h2>
+    <ul class="list--blocks-horizontal">
+        <li>
+            <a href="https://fixer.forzamor.nl/beheer">FixeR</a>
+        </li>
+        <li>
+            <a href="https://onderwerpen.forzamor.nl/beheer">Onderwerpen</a>
+        </li>
+    </ul>
     </turbo-frame>
-{% endblock %}
+{% endblock body %}
