--- a/app/apps/context/templates/standaard/melding_detail_locaties.html
+++ b/app/apps/context/templates/standaard/melding_detail_locaties.html
@@ -7,102 +7,97 @@
             {% if melding.locaties_voor_melding|length > 1 %}Locaties{% else %}Locatie{% endif %}
         </h2>
         <div>
-            {% comment %} <ul class="list-clean"> {% endcomment %}
-                {% with hoogste_gewicht_locatie=melding.locaties_voor_melding|dictsort:"gewicht"|last %}
-                    {% comment %} <li> {% endcomment %}
-                        {% if hoogste_gewicht_locatie %}
-                            <h4>Huidige Locatie</h4>
-                            <div class="locatie-container">
-                                <div class="display--flex--md">
-                                    <ul class="list-clean">
-                                        <li>
-                                            <h3 class="h5">Adres</h3>
-                                            <p>
-                                                {% if hoogste_gewicht_locatie.straatnaam %}{{ hoogste_gewicht_locatie.straatnaam }} {% else %}onbekend {% endif %}
-                                                {% if hoogste_gewicht_locatie.huisnummer %}{{ hoogste_gewicht_locatie.huisnummer }}{% else %}onbekend{% endif %}
-                                            </p>
-                                        </li>
-                                        <li>
-                                            <h3 class="h5">Wijk</h3>
-                                            <p>
-                                                {% if hoogste_gewicht_locatie.wijknaam %}{{ hoogste_gewicht_locatie.wijknaam }} {% else %}onbekend {% endif %}
-                                            </p>
-                                        </li>
-                                    </ul>
-                                    <ul class="list-clean">
-                                        <li>
-                                            <h3 class="h5">Buurt</h3>
-                                            <p>
-                                                {% if hoogste_gewicht_locatie.buurtnaam %}{{ hoogste_gewicht_locatie.buurtnaam }} {% else %}onbekend {% endif %}
-                                            </p>
-                                        </li>
-                                    </ul>
+            {% with hoogste_gewicht_locatie=melding.locaties_voor_melding|dictsort:"gewicht"|last %}
+            {% if hoogste_gewicht_locatie %}
+                <h4>Huidige Locatie</h4>
+                <div class="locatie-container">
+                    <div class="display--flex--md">
+                        <ul class="list-clean">
+                            <li>
+                                <h3 class="h5">Adres</h3>
+                                <p>
+                                    {% if hoogste_gewicht_locatie.straatnaam %}{{ hoogste_gewicht_locatie.straatnaam }} {% else %}onbekend {% endif %}
+                                    {% if hoogste_gewicht_locatie.huisnummer %}{{ hoogste_gewicht_locatie.huisnummer }}{% else %}onbekend{% endif %}
+                                </p>
+                            </li>
+                            <li>
+                                <h3 class="h5">Wijk</h3>
+                                <p>
+                                    {% if hoogste_gewicht_locatie.wijknaam %}{{ hoogste_gewicht_locatie.wijknaam }} {% else %}onbekend {% endif %}
+                                </p>
+                            </li>
+                        </ul>
+                        <ul class="list-clean">
+                            <li>
+                                <h3 class="h5">Buurt</h3>
+                                <p>
+                                    {% if hoogste_gewicht_locatie.buurtnaam %}{{ hoogste_gewicht_locatie.buurtnaam }} {% else %}onbekend {% endif %}
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                    {% if hoogste_gewicht_locatie.geometrie.coordinates %}
+                        <div class="container__map full-width">
+                            <div
+                                class="map"
+                                id="incidentMap"
+                                data-action="touchstart->detail#onTwoFingerDrag touchend->detail#onTwoFingerDrag"
+                            >
+                                <div class="map__overlay">
+                                    <span>
+                                        Gebruik twee vingers om de kaart te verplaatsen
+                                    </span>
                                 </div>
-                                {% if hoogste_gewicht_locatie.geometrie.coordinates %}
-                                    <div class="container__map full-width">
-                                        <div
-                                            class="map"
-                                            id="incidentMap"
-                                            data-action="touchstart->detail#onTwoFingerDrag touchend->detail#onTwoFingerDrag"
-                                        >
-                                            <div class="map__overlay">
-                                                <span>
-                                                    Gebruik twee vingers om de kaart te verplaatsen
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                {% endif %}
                             </div>
-                        {% endif %}
-                    {% comment %} </li> {% endcomment %}
+                        </div>
+                    {% endif %}
+                </div>
+            {% endif %}
+
+            {% for locatie in melding.locaties_voor_melding|dictsortreversed:"gewicht" %}
+                {% if forloop.first and forloop.first != forloop.last %}
                     <details>
-                    {% for locatie in melding.locaties_voor_melding|dictsortreversed:"gewicht" %}
-                        {% if forloop.first and forloop.first != forloop.last %}
+                        <summary>
+                            <h4>Oude Locatie(s)</h4>
 
-                                <summary>
-                                    <h4>Oude Locatie(s)</h4>
+                        </summary>
+                {% endif %}
+                    {% if not forloop.first %}
 
-                                </summary>
-                        {% endif %}
-                        {% comment %} <li> {% endcomment %}
-                            {% if not forloop.first %}
-
-                                <div class="locatie-container display--flex--md">
-                                    <ul class="list-clean">
-                                        <li>
-                                            <h3 class="h5">Adres</h3>
-                                            <p class="h5">
-                                                {% if locatie.straatnaam %}{{ locatie.straatnaam }} {% else %}onbekend {% endif %}
-                                                {% if locatie.huisnummer %}{{ locatie.huisnummer }}{% else %}onbekend{% endif %}
-                                            </p>
-                                        </li>
-                                        <li>
-                                            <h3 class="h5">Wijk</h3>
-                                            <p class="h5">
-                                                {% if locatie.wijknaam %}{{ locatie.wijknaam }} {% else %}onbekend {% endif %}
-                                            </p>
-                                        </li>
-                                    </ul>
-                                    <ul class="list-clean">
-                                        <li>
-                                            <h3 class="h5">Buurt</h3>
-                                            <p class="h5">
-                                                {% if locatie.buurtnaam %}{{ locatie.buurtnaam }} {% else %}onbekend {% endif %}
-                                            </p>
-                                        </li>
-                                    </ul>
-                                </div>
-                            {% endif %}
-                        {% comment %} </li> {% endcomment %}
-                        {% if not forloop.last and not forloop.first %}
-                            <hr class="divider">
-                        {% endif %}
-
-                    {% endfor %}
-                    </details>
-                {% endwith %}
-            {% comment %} </ul> {% endcomment %}
+                        <div class="locatie-container display--flex--md">
+                            <ul class="list-clean">
+                                <li>
+                                    <h3 class="h5">Adres</h3>
+                                    <p class="h5">
+                                        {% if locatie.straatnaam %}{{ locatie.straatnaam }} {% else %}onbekend {% endif %}
+                                        {% if locatie.huisnummer %}{{ locatie.huisnummer }}{% else %}onbekend{% endif %}
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3 class="h5">Wijk</h3>
+                                    <p class="h5">
+                                        {% if locatie.wijknaam %}{{ locatie.wijknaam }} {% else %}onbekend {% endif %}
+                                    </p>
+                                </li>
+                            </ul>
+                            <ul class="list-clean">
+                                <li>
+                                    <h3 class="h5">Buurt</h3>
+                                    <p class="h5">
+                                        {% if locatie.buurtnaam %}{{ locatie.buurtnaam }} {% else %}onbekend {% endif %}
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    {% endif %}
+                {% if not forloop.last and not forloop.first %}
+                    <hr class="divider">
+                {% endif %}
+                {% if forloop.last %}
+                </details>
+                {% endif %}
+            {% endfor %}
+        {% endwith %}
         </div>
     </div>
 </section>
