--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -11,6 +11,7 @@
 {% context_template "melding_detail_locaties.html" as locatie_template %}
 {% context_template "melding_detail_titel.html" as titel_template %}
 {% context_template "melding_detail_melder.html" as melder_template %}
+{% context_template "melding_detail_acties.html" as acties_template %}
 <turbo-frame id="overview">
     <div
         data-controller="detail"
@@ -236,51 +237,7 @@
                         <div class="border-green print-only"></div>
                     </div>
                     <div class="grid-item aside">
-
-                        <div class="container__actions">
-                            <p>
-                                {% if taaktypes and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
-                                <button type="button" class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{%else%}action{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'taak_starten' melding.uuid %}"><span>Start taak</span></button>
-                                {% endif %}
-                                {% if not melding.afgesloten_op %}
-                                <button type="button" class="btn btn-{% if melding.status.naam == 'controle' %}action{%else%}tertiary{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}"><span>Melding afhandelen</span></button>
-                                {% endif %}
-                            </p>
-                            <ul class="list-links">
-                                {% if open_taakopdrachten %}
-                                <li>
-                                    <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_afronden' melding.uuid %}">
-                                        <svg width="18" height="18" viewBox="0 0 55 43" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M49.6439 0.0427246L23.0468 33.2845L4.96397 11.2844L0.317383 15.0798L23.0965 42.8261L54.3288 3.79295L49.6439 0.0427246Z" fill="#00811F"/>
-                                        </svg>Afhandelen taak</button>
-                                </li>
-                                <li>
-                                    <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_annuleren' melding.uuid %}">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F"/>
-                                        </svg>Annuleer taak</button>
-                                </li>
-                                {% endif %}
-                                {% if not melding.afgesloten_op %}
-                                <li>
-                                    <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'melding_annuleren' melding.uuid %}">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F"/>
-                                        </svg>
-                                        Melding annuleren
-                                    </button>
-                                </li>
-                                <li>
-                                    <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'locatie_aanpassen' melding.uuid %}">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.637 0.5L0.5 11.6369V15.8795L4.74263 15.8796L15.8796 4.74264L11.637 0.5ZM13.7583 4.74264L11.637 2.62132L10.046 4.21231L12.1673 6.33363L13.7583 4.74264ZM4.74264 13.7582L11.1066 7.39428L8.98527 5.27296L2.62132 11.6369L4.74264 13.7582Z" fill="#00811F"/>
-                                        </svg>
-                                        Locatie aanpassen
-                                    </button>
-                                </li>
-                                {% endif %}
-                            </ul>
-                        </div>
+                        {% include acties_template %}
                         {% if melding.status.naam != "afgehandeld" and melding.status.naam != "geannuleerd" %}
                         <section class="section--seperated">
                             <turbo-frame id="informatie_toevoegen" src="{% url 'informatie_toevoegen' melding.uuid %}">
