--- a/app/frontend/assets/styles/components/_map.scss
+++ b/app/frontend/assets/styles/components/_map.scss
@@ -12,6 +12,7 @@
     height: 0;
     padding-bottom: 50%;
     flex: 4 1 auto;
+    margin-bottom: $container-padding-x;
 
     .map {
         height: 0;
