--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -48,9 +48,9 @@ body.show-modal--first-filter {
     z-index: 2100;
 
     .turboframe-container {
-        display: flex;
         align-items: center;
-        min-height: 100%;
+        height: 97vh;
+        overflow-y: auto;
     }
 
     &-dialog {
